--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@ under the License.
       <artifactId>breeze_2.10</artifactId> <!-- or 2.11 -->
       <version>0.11.2</version>
     </dependency>
+    <!--dependency>
+      <groupId>org.scalanlp</groupId>
+      <artifactId>breeze-natives_2.10</artifactId>
+      <version>0.11.2</version>
+    </dependency-->
     <dependency>
       <groupId>org.scalanlp</groupId>
       <artifactId>breeze-macros_2.10</artifactId>
